crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_modifier_paren_next_line.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {\n    id: integer() default\n    (now)\n}\n"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 13,
        },
        boundary: Position {
            line: 2,
            column: 26,
        },
        unexpected: Position {
            line: 3,
            column: 5,
        },
    },
)
