crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_modifier_reserved.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: integer() match }"
---
Column(
    1,
    29,
)
