crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_name_reserved.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table type { }"
---
Name(
    1,
    7,
)
