crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_name_uppercase.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table Users { }"
---
Name(
    1,
    7,
)
