crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_no_name.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table { }"
---
Name(
    1,
    7,
)
