crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_open.snap
---
source: crates/alder-parse/src/item/table.rs
description: table users ( )
---
Open(
    1,
    13,
)
