crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_unclosed.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: integer()"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 13,
        },
        boundary: Position {
            line: 1,
            column: 28,
        },
        unexpected: Position {
            line: 1,
            column: 28,
        },
    },
)
