crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_unclosed_empty.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users {"
---
Column(
    1,
    14,
)
