crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__table_columns_same_line.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table t { a: integer() b: text() }"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: "t",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 11,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: "a",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 23,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 21,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 24,
                    },
                    end: Position {
                        line: 1,
                        column: 25,
                    },
                },
                value: "b",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 27,
                    },
                    end: Position {
                        line: 1,
                        column: 33,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 27,
                            },
                            end: Position {
                                line: 1,
                                column: 31,
                            },
                        },
                        value: Var(
                            "text",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [],
        },
    ],
}
